@@ -39,8 +39,8 @@ public class TestExamples extends TestCase {
      */
     public void testTestExamples() throws Exception {
         File examples = new File(Resources.getRoot(), "/dig/test");
-        assertEquals(29, new FileScanner(this::check).scan(examples));
-        assertEquals(21, testCasesInFiles);
+        assertEquals(32, new FileScanner(this::check).scan(examples));
+        assertEquals(23, testCasesInFiles);
     }
 
 
